test/mlir/transpose_bad_case_5.mlir.stderr
test/mlir/transpose_bad_case_5.mlir:3:8: error: 'colgm.transpose' op permutation[0] = 1 maps input dim 3 to output dim 0, but output dim is 2
  %0 = colgm.transpose %arg {permutation = [1, 0]} : tensor<2x3xf32> -> tensor<2x3xf32>
       ^
test/mlir/transpose_bad_case_5.mlir:3:8: note: see current operation: %0 = "colgm.transpose"(%arg0) {permutation = [1, 0]} : (tensor<2x3xf32>) -> tensor<2x3xf32>
